# jam-pack-nodegui-launcher

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
src/: DG_misc.h  main.c
